# sophiathoth

./: .gitignore  LICENSE  README.md  REQUIREMENT.md  clean_databases.sql  docker-compose.yml  run_tests.sh
document_processor/: Dockerfile  requirements.txt
document_processor/app/: clean_db.py  config.py  database.py  main.py  models.py  parser.py  schemas.py  storage.py
document_processor/app/api/: api.py
document_processor/rust/: Cargo.toml
document_processor/rust/src/: lib.rs
document_processor/tests/: earth_question_answer.xlsx  test_document_processor.py  test_excel_parser.py  test_question_answers.xlsx
document_processor/tests/functional/: test_document_processor.py  test_document_processor_e2e.py
document_processor/tests/knowledge_base/: test_knowledge_api.py
knowledge_base/: Dockerfile  README.md  requirements.txt  test_api.py
knowledge_base/app/: __init__.py  clean_db.py  config.py  database.py  init_db.py  main.py  schemas.py  semantic.py  storage.py  test_search.py
knowledge_base/app/api/: api.py
semantic_engine/: Dockerfile  requirements.txt
semantic_engine/app/: config.py  database.py  embeddings.py  llm.py  main.py  schemas.py
set_up/: setup-keycloak.sh  test-keycloak-login.sh
tests/functional/: README.md  test_document_processor.py
tests/semantic_engine/: test_similarity.py
web_ui/: Dockerfile  README.md  env.sh  nginx.conf  package-lock.json  package.json
web_ui/public/: index.html  manifest.json  offline.html  service-worker.js  silent-check-sso.html
web_ui/src/: App.js  index.js  serviceWorkerRegistration.js
(+47 files in other folders)
