[package]
name = "excel_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "excel_parser"
crate-type = ["cdylib"]

[dependencies]
calamine = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.10.1"
